bean y presentacion de registro

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -5,7 +5,7 @@
 </h:head>
 <h:body>
 <h:form prependId="false">
-    <p:link value="Comprar" outcome="/shopping/shoppingkart" />            
+    <p:commandButton value="Registrar equipo" action="/laboratorista/registrarEquipo"></p:commandButton>
 </h:form>
 </h:body>
 </html>
