--- a/src/main/webapp/laboratorista/registrarEquipo.xhtml
+++ b/src/main/webapp/laboratorista/registrarEquipo.xhtml
@@ -3,37 +3,31 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui" 
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-    <style>
-        h1,h2,h3,h4,h5,h6{
-        text-align: center;
-        }
-        body{
-            text-align: center;
-        }
-    </style>
+    
     <h:head></h:head>
     <h:body>
-        <h2>Registro de modelo</h2>
+        <h1 style="text-align: center;">Registro de modelo</h1>
         <h:form id="formRegistro">
-            <h4> consultar modelo </h4>
-            <p:inputText></p:inputText>
-            <br/>
-            <br/>
-            <p:commandButton value="Consultar" update="formRegistro" onclick="panelRegistro.show();">
-            </p:commandButton>
-            <br/>
-            <br/>
-            <p:panel widgetVar="panelRegistro" visible="false" closable="true" toggleable="true">
-                <p:outputLabel value="Ingrese numero serial: "/>
-                <p:inputText></p:inputText>
-                <br/>
-                <p:outputLabel value="Ingrese el numero de placa: "/>
-                <p:inputText></p:inputText>
-                <br/>
-                <br/>
-                <br/>
-                <p:commandButton value="Registrar"></p:commandButton>
-            </p:panel>
+            <p:dataTable var="Equipo" value="#{beanRegistro.equipos}" widgetVar="TablaEquipos" emptyMessage="No se encontro ningun equipo" filteredValue="#{beanRegistro.equiposFiltrados}">
+                <f:facet name="header">
+                    <p:outputLabel>
+                        <h:outputText value="Buscador de modelo: "/>
+                        <p:inputText id="filter" onkeyup="PF('TablaEquipos').filter()" placeholder="modelo"/>
+                    </p:outputLabel>
+                </f:facet>
+                <p:column headerText="Modelo">
+                    <h:outputText value="#{Equipo.nombre}"/>
+                </p:column>
+                <p:column headerText="Marca">
+                    <h:outputText value="#{Equipo.marca}"/>
+                </p:column>
+                <p:column headerText="foto">
+                    <h:panelGrid columns="1" style="width:100%">
+                        <p:graphicImage name="/imagenes/#{Equipo.foto}"/>
+                    </h:panelGrid>
+                </p:column>
+            </p:dataTable>
+            
         </h:form>
     </h:body>
 </html>
