--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -6,6 +6,7 @@
 <h:body>
 <h:form prependId="false">
     <p:commandButton value="Registrar equipo" action="/laboratorista/registrarEquipo"></p:commandButton>
+    <p:commandButton value="Consultar historia" action="/laboratorista/consultahistorial"/>
 </h:form>
 </h:body>
 </html>
